# StudyStatus-SmartLight-RKNN

./: Android.mk  Application.mk  CMakeLists.txt  README.md  cmake_android.sh  cmake_linux.sh  ndk_build.sh
data/: action.model  smartlight.model  study_status.cfg
src/: angouka_lite.hpp  base_util.cpp  base_util.h  demo.cpp  jni_lib.cpp  study_status.cpp  study_status.h  timer_clock.h  version.h  yuv_utils.cpp  yuv_utils.h
src/config/: cls_config.cpp  cls_config.h
tools/: CMakeLists.txt  base64.cpp  base64.h  decode_base64_to_image.cpp  thirdparty
